# aruco_localization

./: .gitignore
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/config/: pupil.yaml
aruco_detection/config/boards/: back_grid.yml  big_grid.yml  far_back_grid.yml  fridge_column_grid.yml  general_tags.yml  table_grid.yml
aruco_detection/include/aruco_detection/: ArucoBoard.hpp  ArucoDetector.hpp  CameraModel.hpp
aruco_detection/launch/: aruco_detector.launch  covariance_estimator.launch  video_playback.launch
aruco_detection/msg/: Board.msg  Boards.msg
aruco_detection/src/: ArucoBoard.cpp  ArucoDetectionNode.cpp  ArucoDetector.cpp  CameraModel.cpp  StationaryVideoCovarianceEstimator.cpp
aruco_localization/: CMakeLists.txt  package.xml
aruco_localization/launch/: aruco_localization.launch  localization_pipeline.launch  robot_localization.launch
aruco_localization/src/: ArucoLocalizationNode.cpp
aruco_tf/: CMakeLists.txt  package.xml
aruco_tf/launch/: build_robot_tf.launch  build_tf.launch
aruco_tf/scripts/: build_robot_transform.py  build_static_transforms.py
