<?xml version="1.0"?>
<package format="2">
  <name>aruco_tf</name>
  <version>0.1.0</version>
  <description>Package for detection ArUcO board and publishing their detection.</description>

  <maintainer email="rmaronson@cmu.edu">Reuben Aronson</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aruco_detection</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>harpmath</depend>
  <exec_depend>rospy_message_converter</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
